java hindi iter_0