@@ -2,24 +2,27 @@ import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
 
 public class TemplateEncoder {
-    /**
-     * 对包含模板参数名称的字符串进行编，特别是字符 '{' 和 '}' 将被百分比编码。
-     * @param s 包含零个或多个模板参数名称的字符串
-     * @return 编码后的模板参数名称字符串。
+    /** 
+     * एक स्ट्रिंग को एन्कोड करता है जिसमें टेम्पलेट पैरामीटर नाम मौजूद होते हैं, विशेष रूप से '{' और '}' अक्षरों को प्रतिशत-कोडित किया जाएगा।
+     * @param s वह स्ट्रिंग जिसमें शून्य या अधिक टेम्पलेट पैरामीटर नाम हैं
+     * @return एन्कोडेड टेम्पलेट पैरामीटर नामों के साथ स्ट्रिंग।
      */
     public static String encodeTemplateNames(String s) {
         if (s == null) {
             return null;
         }
         
-        try {
-            // Encode the string using UTF-8 and replace '{' and '}' with their percent-encoded values
-            String encoded = URLEncoder.encode(s, "UTF-8");
-            encoded = encoded.replace("+", "%20"); // Replace spaces with %20
-            return encoded.replace("%7B", "{").replace("%7D", "}");
-        } catch (UnsupportedEncodingException e) {
-            throw new RuntimeException("UTF-8 encoding not supported", e);
+        StringBuilder encodedString = new StringBuilder();
+        for (char c : s.toCharArray()) {
+            if (c == '{') {
+                encodedString.append(URLEncoder.encode("{", java.nio.charset.StandardCharsets.UTF_8));
+            } else if (c == '}') {
+                encodedString.append(URLEncoder.encode("}", java.nio.charset.StandardCharsets.UTF_8));
+            } else {
+                encodedString.append(c);
+            }
         }
+        return encodedString.toString();
     }
 
     public static void main(String[] args) {
